[chromium] Fix potential nullptr deref in TiledLayerChromium::pushPropertiesTo https://bugs.webkit.org/show_bug.cgi?id=66808

Reviewed by James Robinson.

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::pushPropertiesTo):
* platform/graphics/chromium/cc/CCTiledLayerImpl.cpp:
(WebCore::CCTiledLayerImpl::draw):

Canonical link: https://commits.webkit.org/82613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93640 268f45cc-cd09-0410-ab3c-d52691b4dbfc